[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Chess_Pieces_Sprite.svg" type="Texture" id=1]
[ext_resource path="res://Scenes/Pieces/Piece.gd" type="Script" id=2]
[ext_resource path="res://Scenes/RedOutline.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23, 23 )

[node name="Piece" type="Area2D"]
z_index = 1
script = ExtResource( 2 )

[node name="RedOutline" parent="." instance=ExtResource( 3 )]
visible = false
color = Color( 1, 1, 1, 0.478431 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 45, 45 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="mouse_entered" from="." to="." method="_on_Piece_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Piece_mouse_exited"]
